# yaml-validator-mcp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.hu.md  README.md  README_HU.md  pyproject.toml  renovate.json  server.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude.yml  python-ci.yml  release.yml  remove-readme-hu.yml  scheduled-checks.yml  scorecard.yml  yaml-lint.yml
tests/: test_fix.py  test_gha_validate.py  test_validate.py
tests/fixtures/edge_cases/: deep_nested.yaml  null_values.yaml  only_comments.yaml  with_comments.yaml
tests/fixtures/github-actions/invalid/: undefined-matrix.yml  unknown-key.yml
tests/fixtures/github-actions/valid/: clean.yml
tests/fixtures/invalid/: bad_indent.yaml  invalid_key_char.yaml  long_lines.yaml  no_doc_start.yaml  tab_indent.yaml  trailing_whitespace.yaml  unmatched_quote.yaml
tests/fixtures/valid/: list.yaml  multi_doc.yaml  multiline.yaml  nested.yaml  simple.yaml  unicode.yaml
