[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml-validator-mcp"
version = "0.1.0"
description = "MCP server for deterministic YAML validation and auto-fixing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Naaman", email = "naaman@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "ruamel.yaml>=0.18.0",
    "yamllint>=1.35.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.20.0",
]

[project.scripts]
yaml-validator-mcp = "server:main"

[project.urls]
Repository = "https://github.com/Naaman666/yaml-validator-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-includes = ["server.py"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["yamllint", "yamllint.*", "ruamel.yaml", "ruamel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
