[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml-validator-mcp"
version = "1.0.0"
description = "MCP server for deterministic YAML validation and auto-fixing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Claude (Anthropic)", email = "noreply@anthropic.com"},
]
maintainers = [
    {name = "Naaman666"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "ruamel.yaml>=0.18.0",
    "yamllint>=1.35.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
# Bundles the actionlint binary as a Python package, cross-platform.
# Install with `pip install yaml-validator-mcp[gha]` to enable gha_validate.
gha = [
    "actionlint-py>=1.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.20.0",
    "actionlint-py>=1.7.0",
    "python-semantic-release>=9.0.0",
]

[project.scripts]
yaml-validator-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/Naaman666/yaml-validator-mcp"
Repository = "https://github.com/Naaman666/yaml-validator-mcp"
Issues = "https://github.com/Naaman666/yaml-validator-mcp/issues"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["yamllint", "yamllint.*", "ruamel.yaml", "ruamel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
major_on_zero = false
commit_message = "chore(release): v{version} [skip ci]"
